Minor spacing issue, added nicer vote button tracker

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -24,3 +24,16 @@
 .main.ui.container {
   margin-top: 2em;
 }
+
+.ui.unstackable.items>.item>.vote {
+  width: 35px;
+}
+
+.ui.unstackable.items>.item>.content {
+  margin-top: 5px;
+}
+
+.ui.unstackable.items>.item>.vote>span.item {
+  text-align: center;
+  margin-left: -5px;
+}
